--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "imagecrawler",
+  "name": "image-crawler-backend",
   "version": "1.0.0",
   "description": "Crawler from an interview problem",
-  "main": "backend/src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node backend/src/index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
