--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SimihUni/ImageCrawler#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "cron": "^4.3.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
