--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "cron": "^4.3.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "node-html-parser": "^7.0.1",
     "pg": "^8.16.3"
   }
 }
